# collections2efi

./: .gitignore  LICENSE.md  README.md  logging_config.toml  main.py  pyproject.toml  write_pids.py
axiell_collections/: provider.py
mappings/: mappings.toml
records/: loader.py  record.py  record_definitions.toml  utils.py
records/base/: utils.py
records/item/: element_type.py  has_access_status.py  has_format.py  has_primary_title.py
records/manifestation/: has_event.py  has_primary_title.py
records/work/: has_alternative_title.py  has_event.py  has_genre.py  has_primary_title.py  has_subject.py  utils.py
src/axiell_collections/: __init__.py  provider.py
src/collections2efi/: __init__.py  loader.py  record.py  record_definitions.toml  repositories.py  translator.py
src/collections2efi/mappings/: loader.py  mappings.toml
src/collections2efi/record_type/base/: belongs_to.py  described_by.py  has_identifier.py  utils.py
src/collections2efi/record_type/item/: described_by.py  element_type.py  has_access_status.py  has_duration.py  has_extent.py  has_format.py  has_primary_title.py  has_webresource.py  in_language.py  is_item_of.py
src/collections2efi/record_type/manifestation/: has_event.py  has_item.py  has_note.py  has_primary_title.py  is_manifestation_of.py
src/collections2efi/record_type/work/: described_by.py  (+9 more)
tests/: conftest.py  populate_test_records.py  test_complete_records.py
tests/item/: test_has_primary_title.py
tests/manifestation/: test_has_event.py  test_has_primary_title.py
tests/manifestations/: test_has_event.py  test_has_primary_title.py
tests/test_complete_records/: test_complete_record_200000687_.yml  test_complete_record_200221452_.yml  test_complete_record_200236329_.yml  test_complete_record_200322007_.yml
tests/test_records/collect/: 200000127.xml  200000687.xml  200044362.xml  200152050.xml  200221452.xml  200236329.xml  200322007.xml  200322201.xml  200323440.xml  200339241.xml
tests/test_records/people/: 11642.xml  127229.xml  1449.xml  176718.xml  2066.xml  3701.xml  5733.xml  8615.xml
tests/test_records/thesau/: 11170.xml  11203.xml  11218.xml  16902.xml  208.xml  21007.xml  281.xml  282.xml  33722.xml  43.xml  43216.xml  5055.xml  5290.xml  5479.xml  5485.xml  626.xml  753.xml  8059.xml  8103.xml  8170.xml  8438.xml  846.xml  8798.xml  8849.xml  9646.xml
tests/work/: test_has_alternative_title.py  test_has_primary_title.py
