[project]
name = "av-efi-generator"
version = "0.1.0"
description = ""
authors = [{ name = "fjlein", email = "fjlein@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "dicttoxml>=1.7.16",
    "lxml>=6.0.0",
    "requests>=2.32.3",
    "linkml-runtime>=1.8.0",
    "avefi-schema @ git+https://github.com/AV-EFI/av-efi-schema.git@eb24e8bf2b1c62b0b41ddbfd8db4e25307632c04",
    "requests-cache>=1.2.1"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-dotenv = "^0.5.2"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

