[project]
name = "collections2efi"
version = "0.1.0"
description = ""
authors = [{ name = "Felix Lein", email = "fjlein@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "dicttoxml>=1.7.16",
    "lxml>=6.0.0",
    "requests>=2.32.3",
    "linkml-runtime>=1.8.0",
    "avefi-schema @ git+https://github.com/AV-EFI/av-efi-schema.git@173321cd2b7d08fb1970d84133ffe8ecc0f463eb",
    "requests-cache>=1.2.1",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ["src/axiell_collections/wrapper.py"]

[tool.ruff.lint]
select = ["I", "TID"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
